kubernetes/apps/flux-system/addons/app/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  annotations:
    external-dns.alpha.kubernetes.io/target: external.${DOMAIN}
    # disabled
    nginx.ingress.kubernetes.io/custom-http-errors: 599
spec:
  ingressClassName: external
  rules:
    - host: flux-webhook.${DOMAIN}
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
